# pypg

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
pypg/: locator.py  property.py  property_transcoder.py  transcode.py
pypg/test/: test_observable.py  test_overridable.py  test_property.py  test_traits.py  test_transcoder.py
pypg/traits/: config.py  metadata.py  obligate.py  observable.py  overridable.py  read_only.py  unit.py  validated.py
pyproperty/: __init__.py  locator.py  property.py  property_transcoder.py  test.py  transcode.py  type_registry.py  type_utils.py
pyproperty/test/: test_locator.py  test_observable.py  test_overridable.py  test_property.py  test_traits.py  test_transcoder.py  test_type_registry.py
pyproperty/traits/: __init__.py  observable.py  overridable.py  unit.py  validated.py  validator.py
src/pypg/: __init__.py  locator.py  named.py  property.py  property_transcoder.py  transcode.py  type_registry.py  type_utils.py
src/pypg/traits/: __init__.py  allowed_range.py  config.py  member_named.py  metadata.py  observable.py  read_only.py  reference_counted.py
tests/: test_allowed_range.py  test_config.py  test_diamond_inheritance.py  test_locator.py  test_member_named.py  test_obligate.py  test_observable.py  test_overridable.py  test_property.py  test_readonly.py  test_reference_counted.py  test_traits.py  test_transcoder.py  test_type_registry.py  test_type_schema_encoding.py  test_type_utils.py
tests/test_pkg/: module.py
tests/test_pkg/subpkg/: submodule.py
